[package]
name = "crud-operation-with-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
bson = "2.5.0"
futures-util = "0.3.26"
mongodb = "2.3.1"
serde = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3"